# rust-brighton-embedded-day-2

./: Cargo.toml  README.md  openocd.gdb
.cargo/: config
src/: main.rs
