[package]
authors = ["Eric Clack <eric@bn7.net>"]
edition = "2018"
readme = "README.md"
name = "rust-brighton-embedded-leds"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.6.0", features = ["stm32f411", "rt"]}
cortex-m-rtfm = "0.5.0-beta.1"

# For Qemu but doesn't work
# lm3s6965 = "0.1.3"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

smart-leds-trait = {git = "https://github.com/smart-leds-rs/smart-leds-trait"}
smart-leds = {git = "https://github.com/smart-leds-rs/smart-leds"}
ws2812-spi = {git = "https://github.com/smart-leds-rs/ws2812-spi-rs"}
ws2812-timer-delay = {git = "https://github.com/smart-leds-rs/ws2812-timer-delay-rs", features = ["slow"]}

# this lets you use `cargo fix`!
[[bin]]
name = "rust-brighton-embedded-leds"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
